# wathcing_log_parser

./: CODEBASE_ANALYSIS.md  Cargo.toml  DEMO.md  README.md  install.sh  sample_config.yaml  sample_log.txt  test.sh
.github/workflows/: release.yml
src/: cache_db.rs  datatype.rs  logger.rs  main.rs  parse_identity.rs  parser.rs  parser_task_manager.rs  stats.rs
tests/: standard.txt
