[package]
name = "watching_record"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.2"
chinese-number = "0.7.7"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
dirs-2 = "3.0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.33"
rusqlite = "0.37.0"

[features]
bundle-sqlite = ["rusqlite/bundled"]
thiserror = "2.0.16"
